buildscript {
    repositories {
        mavenCentral()
    }
    
    dependencies {
        classpath("org.springframework.boot:spring-boot-gradle-plugin:2.4.5")
        classpath("org.springframework.boot.experimental:spring-boot-thin-gradle-plugin:1.0.26.RELEASE")
    }
}

apply plugin: 'java'
apply plugin: 'eclipse'
apply plugin: 'org.springframework.boot'
apply plugin: 'io.spring.dependency-management'
apply plugin: 'org.springframework.boot.experimental.thin-launcher'

jar {
    baseName = 'SpotifyDiscoveryBot'
    version = '1.0'
    bootJar.dependsOn = [thinProperties]
}

springBoot {
    mainClassName = 'spotify.SpotifyDiscoveryBot'
}

sourceCompatibility = 1.11
targetCompatibility = 1.11

repositories {
    mavenCentral()
}

dependencies {
    implementation('se.michaelthelin.spotify:spotify-web-api-java:6.5.4')
    
    implementation 'org.xerial:sqlite-jdbc:3.34.0'
    implementation 'com.google.guava:guava:30.1.1-jre'
    implementation 'org.springframework.boot:spring-boot-starter-web:2.4.5'
    
	testImplementation 'junit:junit:4.13.2'
    testImplementation 'org.springframework.boot:spring-boot-starter-test:2.4.5'
}
